QC plot layout improvements: tooltip truncation, redundant titles, etc (#519)
* QC plot layout improvements: tooltip truncation, redundant titles, etc

* Issue 45204: Help users know the right AutoQC settings

* Improve hover tooltip for QC plot points

--- a/webapp/TargetedMS/css/qcTrendPlotReport.css
+++ b/webapp/TargetedMS/css/qcTrendPlotReport.css
@@ -51,8 +51,8 @@
 }
 
 .qc-hover-field .x4-form-item-label {
-    margin-top: 2px;
     font-weight: bold;
+    font-size: 12px;
 }
 
 .qc-paging-prev, .qc-paging-next {
