Issue 45082: Rename the menu item and the title of the config page to use "Precursors" in Panorama QC pages (#92)
* Rename from Peptides/Molecules to Precursors

--- a/resources/views/configureQCGroups.html
+++ b/resources/views/configureQCGroups.html
@@ -55,7 +55,7 @@
                         renderTo: 'mark-precursor-peptides',
                         schemaName: 'targetedms',
                         queryName: 'QCGroupingPrecursorPeptides',
-                        title: 'Precursor Peptides',
+                        title: 'Peptide Precursors',
                         buttonBar: {
                             items: [
                                 LABKEY.QueryWebPart.standardButtons.views,
@@ -90,7 +90,7 @@
                     renderTo: 'mark-precursor-molecule',
                     schemaName: 'targetedms',
                     queryName: 'QCGroupingPrecursorMolecules',
-                    title: 'Precursor Molecules',
+                    title: 'Small Molecule Precursors',
                     buttonBar: {
                         items:[
                             LABKEY.QueryWebPart.standardButtons.views,
