--- a/webapp/TargetedMS/css/js-year-calendar-customizations.css
+++ b/webapp/TargetedMS/css/js-year-calendar-customizations.css
@@ -18,3 +18,124 @@
     padding: 1px;
     vertical-align: center;
 }
+
+.calendar table.month td.day .offline {
+    background-image: linear-gradient(45deg, transparent 0%, transparent 50%, #3334 50%, #3334 100%);
+}
+
+.calendar table.month td.day .shade0 {
+    background-color: rgb(0, 81, 138, 0.5);
+}
+.calendar table.month td.day .shade1 {
+    background-color: rgb(0, 102, 151, 0.5);
+}
+.calendar table.month td.day .shade2 {
+    background-color: rgb(0, 123, 159, 0.5);
+}
+.calendar table.month td.day .shade3 {
+    background-color: rgb(0, 143, 162, 0.5);
+}
+.calendar table.month td.day .shade4 {
+    background-color: rgb(49, 161, 162, 0.5);
+}
+.calendar table.month td.day .shade5 {
+    background-color: rgb(94, 179, 162, 0.5);
+}
+.calendar table.month td.day .shade6 {
+    background-color: rgb(134, 196, 164, 0.5);
+}
+.calendar table.month td.day .shade7 {
+    background-color: rgb(172, 212, 169, 0.5);
+}
+.calendar table.month td.day .shade8 {
+    background-color: rgb(210, 227, 179, 0.5);
+}
+.calendar table.month td.day .shade9 {
+    background-color: rgb(247, 242, 195, 0.5);
+}
+.calendar table.month td.day .shade10 {
+    background-color: rgb(240, 225, 174, 0.5);
+}
+.calendar table.month td.day .shade11 {
+    background-color: rgb(234, 208, 155, 0.5);
+}
+.calendar table.month td.day .shade12 {
+    background-color: rgb(228, 190, 137, 0.5);
+}
+.calendar table.month td.day .shade13 {
+    background-color: rgb(223, 172, 121, 0.5);
+}
+.calendar table.month td.day .shade14 {
+    background-color: rgb(217, 154, 108, 0.5);
+}
+.calendar table.month td.day .shade15 {
+    background-color: rgb(211, 135, 97, 0.5);
+}
+.calendar table.month td.day .shade16 {
+    background-color: rgb(204, 117, 88, 0.5);
+}
+.calendar table.month td.day .shade17 {
+    background-color: rgb(196, 98, 82, 0.5);
+}
+.calendar table.month td.day .shade18 {
+    background-color: rgb(187, 78, 78, 0.5);
+}
+
+.calendar table.month td.day .shade0:hover {
+    background-color: rgb(0, 81, 138, 0.7);
+}
+.calendar table.month td.day .shade1:hover {
+    background-color: rgb(0, 102, 151, 0.7);
+}
+.calendar table.month td.day .shade2:hover {
+    background-color: rgb(0, 123, 159, 0.7);
+}
+.calendar table.month td.day .shade3:hover {
+    background-color: rgb(0, 143, 162, 0.7);
+}
+.calendar table.month td.day .shade4:hover {
+    background-color: rgb(49, 161, 162, 0.7);
+}
+.calendar table.month td.day .shade5:hover {
+    background-color: rgb(94, 179, 162, 0.7);
+}
+.calendar table.month td.day .shade6:hover {
+    background-color: rgb(134, 196, 164, 0.7);
+}
+.calendar table.month td.day .shade7:hover {
+    background-color: rgb(172, 212, 169, 0.7);
+}
+.calendar table.month td.day .shade8:hover {
+    background-color: rgb(210, 227, 179, 0.7);
+}
+.calendar table.month td.day .shade9:hover {
+    background-color: rgb(247, 242, 195, 0.7);
+}
+
+.calendar table.month td.day .shade10:hover {
+    background-color: rgb(240, 225, 174, 0.7);
+}
+.calendar table.month td.day .shade11:hover {
+    background-color: rgb(234, 208, 155, 0.7);
+}
+.calendar table.month td.day .shade12:hover {
+    background-color: rgb(228, 190, 137, 0.7);
+}
+.calendar table.month td.day .shade13:hover {
+    background-color: rgb(223, 172, 121, 0.7);
+}
+.calendar table.month td.day .shade14:hover {
+    background-color: rgb(217, 154, 108, 0.7);
+}
+.calendar table.month td.day .shade15:hover {
+    background-color: rgb(211, 135, 97, 0.7);
+}
+.calendar table.month td.day .shade16:hover {
+    background-color: rgb(204, 117, 88, 0.7);
+}
+.calendar table.month td.day .shade17:hover {
+    background-color: rgb(196, 98, 82, 0.7);
+}
+.calendar table.month td.day .shade18:hover {
+    background-color: rgb(187, 78, 78, 0.7);
+}
